; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_syscalls.c_trap_AAS_ValueForBSPEpairKey.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_syscalls.c_trap_AAS_ValueForBSPEpairKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BOTLIB_AAS_VALUE_FOR_BSP_EPAIR_KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trap_AAS_ValueForBSPEpairKey(i32 %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @BOTLIB_AAS_VALUE_FOR_BSP_EPAIR_KEY, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @syscall(i32 %9, i32 %10, i8* %11, i8* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @syscall(i32, i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
